--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -21,10 +21,10 @@
                 android:icon="@drawable/ic_nav_news"
                 android:title="@string/title_nav_news" />
         </group>
-        <item
+<!--        <item
             android:id="@+id/nav_featured"
             android:icon="@drawable/ic_nav_featured"
-            android:title="@string/title_nav_featured" />
+            android:title="@string/title_nav_featured" />-->
         <item
             android:id="@+id/nav_tour"
             android:icon="@drawable/ic_nav_tour"
@@ -41,10 +41,10 @@
             android:id="@+id/nav_ent"
             android:icon="@drawable/ic_nav_ent"
             android:title="@string/title_nav_ent" />
-        <item
+<!--        <item
             android:id="@+id/nav_sport"
             android:icon="@drawable/ic_nav_sport"
-            android:title="@string/title_nav_sport" />
+            android:title="@string/title_nav_sport" />-->
         <item
             android:id="@+id/nav_shop"
             android:icon="@drawable/ic_nav_shop"
@@ -53,7 +53,7 @@
             android:id="@+id/nav_transport"
             android:icon="@drawable/ic_nav_transport"
             android:title="@string/title_nav_transport" />
-        <item
+<!--        <item
             android:id="@+id/nav_religion"
             android:icon="@drawable/ic_nav_religion"
             android:title="@string/title_nav_religion" />
@@ -64,7 +64,7 @@
         <item
             android:id="@+id/nav_money"
             android:icon="@drawable/ic_nav_money"
-            android:title="@string/title_nav_money" />
+            android:title="@string/title_nav_money" />-->
     </group>
     <!--Tourist Destination-->
     <!--Food & Drink-->
