--- a/app/src/main/res/menu/menu_activity_maps.xml
+++ b/app/src/main/res/menu/menu_activity_maps.xml
@@ -12,10 +12,10 @@
                 android:id="@+id/nav_all"
                 android:title="@string/title_nav_all"
                 app:showAsAction="never" />
-            <item
+           <!-- <item
                 android:id="@+id/nav_featured"
                 android:title="@string/title_nav_featured"
-                app:showAsAction="never"/>
+                app:showAsAction="never"/>-->
             <item
                 android:id="@+id/nav_tour"
                 android:title="@string/title_nav_tour"
@@ -44,7 +44,7 @@
                 android:id="@+id/nav_transport"
                 android:title="@string/title_nav_transport"
                 app:showAsAction="never" />
-            <item
+ <!--           <item
                 android:id="@+id/nav_religion"
                 android:title="@string/title_nav_religion"
                 app:showAsAction="never" />
@@ -55,7 +55,7 @@
             <item
                 android:id="@+id/nav_money"
                 android:title="@string/title_nav_money"
-                app:showAsAction="never" />
+                app:showAsAction="never" />-->
         </menu>
 
     </item>
