--- a/app/src/main/res/xml/setting_notification.xml
+++ b/app/src/main/res/xml/setting_notification.xml
@@ -35,7 +35,8 @@
 
         <Preference
             android:key="@string/pref_key_language"
-            android:title="@string/pref_title_language" />
+            android:title="@string/pref_title_language"
+            />
         <Preference
             android:key="@string/pref_key_reset_cache"
             android:title="@string/pref_title_cache" />
