--- a/app/src/main/res/menu/menu_activity_main.xml
+++ b/app/src/main/res/menu/menu_activity_main.xml
@@ -20,9 +20,9 @@
         android:title="@string/pref_title_rate"
         app:showAsAction="never" />
 
-    <item
+<!--    <item
         android:id="@+id/action_about"
         android:orderInCategory="100"
         android:title="@string/pref_title_about"
-        app:showAsAction="never" />
+        app:showAsAction="never" />-->
 </menu>
